tdf#99723: target ratio must be reached

to be sure we can avoid decompressing/recompressing

Regression from https://cgit.freedesktop.org/libreoffice/core/commit/?id=76ec54e8c9f3580450bca85236a4f5af0c328588

Change-Id: Iacd7b2419ea85756f936b17f04c4e495d15e5b81
Reviewed-on: https://gerrit.libreoffice.org/30163
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>
(cherry picked from commit 88fb9d8f0aae0030fac75156f78818affae4298f)
Reviewed-on: https://gerrit.libreoffice.org/30265
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>